# ai-stack

./: .env.template  .gitignore  README.MD  package-lock.json  package.json  prek.toml  pyproject.toml  setup.sh
global-config/: opencode.json
global-config/agents/: architect.md  global.md
global-config/skill/skill-resolver/: SKILL.md
global-config/skill/skill-resolver/templates/: pyproject.toml
tasks/backend/.opencode/agents/: backend.md
tasks/dataiku/.opencode/agents/: dataiku.md
tasks/devops/.opencode/agents/: devops.md
tasks/frontend/.opencode/agents/: frontend.md
tasks/mlops/.opencode/agents/: mlops.md
templates/: agent-template.md
