[project]
name = "ai-stack"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dataiku-api-client",
    "clearml",
    "opik",
    "dspy-ai",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "requests",
]

[dependency-groups]
dev = [
    "ruff==0.15.5",
    "ty==0.0.22",
]

[tool.uv]
package = false
